2003-09-25  Gary Thomas  <gary@mlbassoc.com>

	* src/net/bootp.c: Rework DHCP process to handle really stubborn
	servers.

2003-09-24  Gary Thomas  <gary@mlbassoc.com>

	* src/net/bootp.c (__bootp_find_local_ip): Forgot to unregister
	UDP handler - could cause serious problems later!  Also, fix
	problem with retries after DHCP discovery phase.

2003-09-23  Gary Thomas  <gary@mlbassoc.com>

	* src/net/bootp.c (__bootp_find_local_ip): Handle retries on DHCP 
	requests better.

2003-09-22  Gary Thomas  <gary@mlbassoc.com>

	* cdl/redboot.cdl: Fix compile error for systems with no FLASH.

2003-09-21  Gary Thomas  <gary@mlbassoc.com>

	* cdl/redboot.cdl: Make DNS truly optional (remove from template).
	BUG #57316

2003-09-20  Gary Thomas  <gary@mlbassoc.com>

	* src/fs/ide.c: Improve IDE handling by having init function return
	actual number of controllers detected.  This avoids really long times
	for startup if the controller is missing.

	* src/net/bootp.c: Rework to use full DHCP protocol.  Previously,
	once an offer came in, RedBoot was happy, without actually making
	the address reservation and waiting for the final acknowledgement.
	Also, added CDL to enable/disable DHCP.  BUG #1000053

2003-09-20  Chris Garry  <cgarry@sweeneydesign.co.uk>
	
	* src/main.c: Modified the way multiple "RAM" segments are reported.

	* src/fconfig.c: Variables 'stat' and '*err_addr' in function
	flash_write_config() are now defined regardless of whether 
	CYGSEM_REDBOOT_FLASH_COMBINED_FIS_AND_CONFIG is defined of not.

2003-09-19  Gary Thomas  <gary@mlbassoc.com>

	* src/net/timers.c (__timer_poll): Need to call MS_TICKS_DELAY() or
	else time will never progress.  This can cause a missed TCP packet
	to cause the stack to freeze.  BUG #23006

	* src/net/tftp_client.c: Make timeout on very first transaction really
	long - again since some servers are just slow/ill mannered.

	* src/net/net_io.c: Allow default server IP to be always enabled, thus